# DRL-from-Human-Preferences

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
data/: .gitkeep
src/: RLHF.py  loglistening.py  preferences.py  rewardmodelling.py  utils.py
tests/: test_RLHFWrapper.py  test_preferences.py  test_rewardmodelling.py
