[tool.poetry]
name = "deep-reinforcement-learning-from-human-preferences"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "deep_reinforcement_learning_from_human_preferences"}]

[tool.poetry.dependencies]
python = "^3.10"
nox = "^2022.11.21"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
flake8-bugbear = "^22.12.6"
flake8-import-order = "^0.18.2"
pytest = "^7.2.1"
gymnasium = "^0.27.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
